# DONElabs

./: CMakeLists.txt
cpp1/: main.cpp
cpp2/: main.cpp
cpp3/: main.cpp
cpp4/: main.cpp
sfml1.00/: CMakeLists.txt
sfml1.00(sum)/: Makefile  cmake_install.cmake
sfml1.01/: CMakeLists.txt
sfml1.01(fourBalls)/: cmake_install.cmake
sfml1.02/: CMakeLists.txt
sfml1.02(rectangles)/: CMakeCache.txt  Makefile  cmake_install.cmake
sfml1.03/: CMakeLists.txt
sfml1.03(convexShape)/: Makefile  cmake_install.cmake
sfml1.1/: main.cpp
sfml1.1(svetofor)/: CMakeLists.txt  Makefile  cmake_install.cmake
sfml1.2(iniciali)/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
sfml1.3/: main.cpp
sfml1.3(domik)/: CMakeLists.txt  Makefile  cmake_install.cmake
sfml2.00/: CMakeLists.txt  main.cpp
sfml2.01/: CMakeLists.txt  main.cpp
sfml2.02/: CMakeLists.txt
sfml2.03/: CMakeLists.txt
sfml2.1/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
sfml2.2/: main.cpp
sfml3.00/: CMakeLists.txt
sfml3.01/: CMakeLists.txt  main.cpp
sfml3.02/: CMakeLists.txt  main.cpp
sfml3.03/: CMakeLists.txt  main.cpp
sfml3.04/: CMakeLists.txt  main.cpp
sfml3.1/: CMakeLists.txt  main.cpp
wsp1.1/: CMakeLists.txt  main.cpp
wsp1.2/: CMakeLists.txt  main.cpp
wsp1.3/: CMakeLists.txt  main.cpp
wsp1.4/: CMakeLists.txt  main.cpp
wsp2.1/: CMakeLists.txt  Makefile  main.cpp
wsp2.2/: CMakeLists.txt  main.cpp
wsp2.3/: CMakeLists.txt  main.cpp
wsp2.4/: CMakeLists.txt  main.cpp
wsp2.5/: CMakeLists.txt  main.cpp
wsp2.6/: CMakeLists.txt  main.cpp
